<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_image_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:textSize="19sp"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/rating"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:background="#E0E0E0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="19sp"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/releaseDate"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:background="#E0E0E0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/overview"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:textColor="#000"
                    android:background="#E0E0E0"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>